k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  # tls:
  # - hosts:
  #   - flash.com
  #   secretName: nginx-tls
  rules:
  - host: flash.com
    http:
      paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: backend-app-service
              port:
                number: 8000
